# zk_attendance_push

./: CMakeLists.txt  README.md  ZKDB.db  a.out  main.c
http/: api.c  api.h
sqlite/lib/: libsqlite3.la  libsqlite3.so.0
sqlite/lib/pkgconfig/: sqlite3.pc
